[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/block5.png" type="Texture" id=1]
[ext_resource path="res://Block.gd" type="Script" id=2]
[ext_resource path="res://block_kinematic.gd" type="Script" id=3]
[ext_resource path="res://assets/Helvetica.ttf" type="DynamicFontData" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type spatial;



void vertex() {
// Output:0

}

void fragment() {
// Input:3
	float n_out3p0 = TIME;

// ScalarFunc:2
	float n_out2p0 = sin(n_out3p0);

// Output:0
	ALPHA = n_out2p0;

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.1403, 15.9239 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Block" type="KinematicBody2D"]
material = SubResource( 2 )
script = ExtResource( 3 )

[node name="block_button" type="TouchScreenButton" parent="."]
normal = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BlockCollision" type="CollisionShape2D" parent="."]
position = Vector2( 24, 24 )
z_index = 1
shape = SubResource( 3 )

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2( 24, 24 )
enabled = true
cast_to = Vector2( 0, 35.817 )

[node name="RightCast" type="RayCast2D" parent="."]
position = Vector2( 24, 24 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 35.817 )

[node name="LeftCast" type="RayCast2D" parent="."]
position = Vector2( 24, 24 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 35.817 )

[node name="UpCast" type="RayCast2D" parent="."]
position = Vector2( 24, 24 )
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 35.817 )

[node name="Label" type="Label" parent="."]
margin_left = 13.3416
margin_top = 11.6787
margin_right = 35.3416
margin_bottom = 35.6787
custom_fonts/font = SubResource( 4 )
text = "w"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="block_button" to="block_button" method="_on_block_button_pressed"]
